--- a/smtp-proxy/Dockerfile
+++ b/smtp-proxy/Dockerfile
@@ -7,3 +7,4 @@ ENV TINI_VERSION v0.19.0
 ADD https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini /tini
 RUN chmod +x /tini
 ENTRYPOINT ["/tini", "--"]
+CMD ["./entrypoint.sh"]
