--- a/trackme/.gitignore
+++ b/trackme/.gitignore
@@ -1,2 +1,22 @@
-__pycache__/
-sqlite/*
+node_modules
+
+# Output
+.output
+.vercel
+/.svelte-kit
+/build
+*.log
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Env
+.env
+.env.*
+!.env.example
+!.env.test
+
+# Vite
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
