--- a/trackme/Dockerfile
+++ b/trackme/Dockerfile
@@ -1,9 +1,24 @@
-FROM python:3.11-slim
-WORKDIR /app
-COPY ./requirements.txt .
-RUN python3 -m pip install -r requirements.txt
+FROM node:22-alpine AS builder
 
-ENV TINI_VERSION v0.19.0
-ADD https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini /tini
-RUN chmod +x /tini
-ENTRYPOINT ["/tini", "--"]
+WORKDIR /app
+
+COPY package*.json pnpm*.yaml ./
+
+RUN npm i -g pnpm
+RUN pnpm install
+
+COPY . .
+
+RUN pnpm run build
+RUN pnpm prune --prod
+
+FROM node:22-alpine as runner
+
+WORKDIR /app
+
+COPY --from=builder /app/build/ build/
+COPY --from=builder /app/package.json .
+
+ENV NODE_ENV=production
+
+CMD ["node", "build"]
