--- a/trackme/.prettierrc
+++ b/trackme/.prettierrc
@@ -1,8 +1,9 @@
 {
 	"useTabs": true,
 	"singleQuote": true,
-	"trailingComma": "none",
+	"trailingComma": "all",
 	"printWidth": 100,
-	"plugins": ["prettier-plugin-svelte"],
+	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
+	"svelteAllowShorthand": true,
 	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
