--- a/trackme/package.json
+++ b/trackme/package.json
@@ -20,11 +20,13 @@
 		"@types/eslint": "^8.56.7",
 		"@types/uuid": "^10.0.0",
 		"autoprefixer": "^10.4.20",
+		"daisyui": "^4.12.10",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"flowbite": "^2.5.1",
 		"flowbite-svelte": "^0.46.15",
+		"flowbite-svelte-blocks": "^1.1.3",
 		"globals": "^15.0.0",
 		"postcss": "^8.4.41",
 		"prettier": "^3.1.1",
@@ -43,6 +45,7 @@
 	"type": "module",
 	"dependencies": {
 		"class-transformer": "^0.5.1",
+		"flowbite-svelte-icons": "^1.6.1",
 		"http-status-codes": "^2.3.0",
 		"sqlite3": "^5.1.7",
 		"typeorm": "^0.3.20"
