--- a/trackme/Dockerfile.dev
+++ b/trackme/Dockerfile.dev
@@ -7,19 +7,12 @@ COPY package*.json pnpm*.yaml ./
 RUN npm i -g pnpm
 RUN pnpm install
 
-COPY . .
-
-RUN pnpm run build
-RUN pnpm prune --prod
-
 FROM node:22-alpine AS runner
 
 WORKDIR /app
 
-COPY --from=builder /app/build/ /app/build/
 COPY --from=builder /app/node_modules/ /app/node_modules/
-COPY --from=builder /app/package.json /app
 
-ENV NODE_ENV=production
+ENV NODE_ENV=development
 
-CMD ["node", "build"]
+CMD ["yarn", "dev", "--host", "0.0.0.0"]
