--- a/trackme/package.json
+++ b/trackme/package.json
@@ -44,10 +44,10 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"better-sqlite3": "^11.2.1",
 		"class-transformer": "^0.5.1",
 		"flowbite-svelte-icons": "^1.6.1",
 		"http-status-codes": "^2.3.0",
-		"sqlite3": "^5.1.7",
 		"typeorm": "^0.3.20"
 	}
 }
