feat(ui): password recovery/reset + email

--- a/ui/docker-compose.yml
+++ b/ui/docker-compose.yml
@@ -4,11 +4,20 @@ services:
     restart: always
     ports:
       - 5432:5432
-    environment: 
+    environment:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: mysecretpassword
       POSTGRES_DB: local
     volumes:
       - pgdata:/var/lib/postgresql/data
+
+  maildev:
+    image: maildev/maildev:latest
+    container_name: maildev
+    ports:
+      - "1080:1080"
+      - "1025:1025"
+    restart: unless-stopped
+
 volumes:
   pgdata:
