--- a/ui/.env.example
+++ b/ui/.env.example
@@ -1,2 +1,8 @@
-DATABASE_URL="postgres://root:mysecretpassword@localhost:5432/local"
+APP_NAME="Garmin Persistent Livetrack"
+PUBLIC_URL=http://localhost:5173
 JWT_TOKEN_SECRET=
+DATABASE_URL="postgres://root:mysecretpassword@localhost:5432/local"
+SMTP_CONNECTION_URI="smtp://localhost:1025"
+ENABLE_RECOVER_PASSWORD=true
+SMTP_FROM="noreply@local.host"
+ENABLE_RECOVER_PASSWORD=true
