--- a/ui/package.json
+++ b/ui/package.json
@@ -30,6 +30,7 @@
 		"@tailwindcss/typography": "^0.5.15",
 		"@tailwindcss/vite": "^4.0.0",
 		"@types/node": "^22",
+		"@types/nodemailer": "^7.0.1",
 		"@vitest/browser": "^3.2.3",
 		"drizzle-kit": "^0.30.2",
 		"eslint": "^9.18.0",
@@ -54,8 +55,10 @@
 		"@node-rs/argon2": "^2.0.2",
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
+		"@uraniadev/emailer": "^0.1.1",
 		"drizzle-orm": "^0.40.0",
 		"jsonwebtoken": "^9.0.2",
+		"nodemailer": "^7.0.6",
 		"postgres": "^3.4.5"
 	}
 }
