feat(ui): verify email

--- a/ui/.env.example
+++ b/ui/.env.example
@@ -6,3 +6,4 @@ SMTP_CONNECTION_URI="smtp://localhost:1025"
 ENABLE_RECOVER_PASSWORD=true
 SMTP_FROM="noreply@local.host"
 ENABLE_RECOVER_PASSWORD=true
+ENABLE_VERIFY_EMAIL=true
