--- a/ui/.env.example
+++ b/ui/.env.example
@@ -7,3 +7,6 @@ ENABLE_RECOVER_PASSWORD=true
 SMTP_FROM="noreply@local.host"
 ENABLE_RECOVER_PASSWORD=true
 ENABLE_VERIFY_EMAIL=true
+# OAuth providers
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
