--- a/ui/package.json
+++ b/ui/package.json
@@ -56,6 +56,7 @@
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
 		"@uraniadev/emailer": "^0.1.1",
+		"arctic": "^3.7.0",
 		"drizzle-orm": "^0.40.0",
 		"jsonwebtoken": "^9.0.2",
 		"nodemailer": "^7.0.6",
