feat(auth): enclose oauth providers in feature flags

--- a/ui/.env.example
+++ b/ui/.env.example
@@ -5,8 +5,11 @@ DATABASE_URL="postgres://root:mysecretpassword@localhost:5432/local"
 SMTP_CONNECTION_URI="smtp://localhost:1025"
 ENABLE_RECOVER_PASSWORD=true
 SMTP_FROM="noreply@local.host"
+# Feature flags
 ENABLE_RECOVER_PASSWORD=true
 ENABLE_VERIFY_EMAIL=true
+ENABLE_OAUTH_GITHUB=false
+ENABLE_OAUTH_GOOGLE=false
 # OAuth providers
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
