--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,18 +1,31 @@
 services:
-  trackme:
-    build:
-      context: trackme
-      dockerfile: Dockerfile.dev
+  maildev:
+    image: maildev/maildev:latest
+    container_name: maildev
     ports:
-      - 5173:5173
-    volumes:
-      - ./trackme:/app
-      - exclude:/app/node_modules
-    restart: 'unless-stopped'
+      - "1080:1080" # UI
+    restart: unless-stopped
+    networks:
+      - garmin-persistent-livetrack-network
 
   postgres:
     ports:
       - 5432:5432
 
-volumes:
-  exclude:
+  migrate:
+    build:
+      context: ui
+      dockerfile: Dockerfile.dev
+    command: ["yarn", "db:push"]
+
+  ui:
+    build:
+      context: ui
+      dockerfile: Dockerfile.dev
+    ports:
+      - 5173:5173
+    env_file:
+      - ./ui/.env.dev
+    volumes:
+      - ./ui:/app
+      - /app/node_modules
