--- a/ui/.env.example
+++ b/ui/.env.example
@@ -1,5 +1,6 @@
 APP_NAME="Garmin Persistent Livetrack"
 PUBLIC_URL=http://localhost:5173
+ORIGIN=${PUBLIC_URL}
 JWT_TOKEN_SECRET=
 DATABASE_URL="postgres://root:mysecretpassword@localhost:5432/local"
 SMTP_CONNECTION_URI="smtp://localhost:1025"
