feat(ui): lazy-load db & mailer to allow building without env

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -16,6 +16,8 @@ services:
     build:
       context: ui
       dockerfile: Dockerfile.dev
+    depends_on:
+      - postgres # faster but less safe startup
     command: ["yarn", "db:push"]
 
   ui:
