--- a/ui/.env.example
+++ b/ui/.env.example
@@ -1,11 +1,11 @@
-APP_NAME="Garmin Persistent Livetrack"
-PUBLIC_URL=http://localhost:5173
+APP_NAME=Garmin Persistent Livetrack
+PUBLIC_URL=http://localhost:3000
 ORIGIN=${PUBLIC_URL}
 JWT_TOKEN_SECRET=
-DATABASE_URL="postgres://root:mysecretpassword@localhost:5432/local"
-SMTP_CONNECTION_URI="smtp://localhost:1025"
+# DATABASE_URL=postgres://root:mysecretpassword@localhost:5432/local # Set by docker
+SMTP_CONNECTION_URI=smtp://localhost:1025
 ENABLE_RECOVER_PASSWORD=true
-SMTP_FROM="noreply@local.host"
+SMTP_FROM=noreply@local.host
 # Feature flags
 ENABLE_RECOVER_PASSWORD=true
 ENABLE_VERIFY_EMAIL=true
