--- a/ui/package.json
+++ b/ui/package.json
@@ -71,6 +71,7 @@
 		"nodemailer": "^7.0.6",
 		"postgres": "^3.4.5",
 		"qrcode": "^1.5.4",
+		"svelte-youtube-embed": "^0.4.6",
 		"vcards-js": "^2.10.0"
 	}
 }
