feat(ui): variabilize SMTP proxy hostname

--- a/ui/.env.example
+++ b/ui/.env.example
@@ -6,6 +6,7 @@ JWT_TOKEN_SECRET=
 SMTP_CONNECTION_URI=smtp://localhost:1025
 ENABLE_RECOVER_PASSWORD=true
 SMTP_FROM=noreply@local.host
+PUBLIC_SMTP_PROXY_HOSTNAME=local.host
 # Feature flags
 ENABLE_RECOVER_PASSWORD=true
 ENABLE_VERIFY_EMAIL=true
