--- a/ui/package.json
+++ b/ui/package.json
@@ -72,6 +72,7 @@
 		"postgres": "^3.4.5",
 		"qrcode": "^1.5.4",
 		"svelte-youtube-embed": "^0.4.6",
+		"sveltekit-sse": "^0.14.3",
 		"vcards-js": "^2.10.0"
 	}
 }
