--- a/ui/.env.example
+++ b/ui/.env.example
@@ -16,3 +16,6 @@ GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+# Web Push keys - generate with `npx web-push generate-vapid-keys`
+VAPID_PUBLIC_KEY=
+VAPID_PRIVATE_KEY=
