--- a/ui/package.json
+++ b/ui/package.json
@@ -25,6 +25,7 @@
 		"@eslint/js": "^9.18.0",
 		"@internationalized/date": "^3.8.1",
 		"@lucide/svelte": "^0.544.0",
+		"@poppanator/sveltekit-svg": "^6.0.1",
 		"@sveltejs/adapter-node": "^5.3.2",
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
