--- a/ui/package.json
+++ b/ui/package.json
@@ -45,6 +45,7 @@
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
 		"globals": "^16.0.0",
+		"http-status-codes": "^2.3.0",
 		"layerchart": "2.0.0-next.27",
 		"playwright": "^1.53.0",
 		"prettier": "^3.4.2",
